# captcha-cracker

./: captcha_cracker.py  main.py  pyproject.toml
models/: weights.h5
